score/slang/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> document
Rule 1     document -> block
Rule 2     block -> blockcontent
Rule 3     block -> blockcontent block
Rule 4     blockcontent -> text
Rule 5     blockcontent -> tag
Rule 6     text -> TEXT
Rule 7     text -> NEWLINE
Rule 8     text -> POSSIBLEINDENT
Rule 9     tag -> TAGOPEN TAGNAME TAGCLOSE
Rule 10    tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE
Rule 11    tag -> TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT
Rule 12    tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT
Rule 13    arglist -> arg
Rule 14    arglist -> arglist TAGARGSEP arg
Rule 15    arg -> argpart
Rule 16    arg -> argpart arg
Rule 17    argpart -> TEXT
Rule 18    argpart -> tag

Terminals, with rules where they appear

DEDENT               : 11 12
INDENT               : 11 12
NEWLINE              : 7 11 12
POSSIBLEINDENT       : 8
TAGARGSEP            : 10 11 12 12 14
TAGCLOSE             : 9 10
TAGNAME              : 9 10 11 12
TAGOPEN              : 9 10 11 12
TEXT                 : 6 17
error                : 

Nonterminals, with rules where they appear

arg                  : 13 14 16
arglist              : 10 12 14
argpart              : 15 16
block                : 1 3 11 12
blockcontent         : 2 3
document             : 0
tag                  : 5 18
text                 : 4

Parsing method: LALR

state 0

    (0) S' -> . document
    (1) document -> . block
    (2) block -> . blockcontent
    (3) block -> . blockcontent block
    (4) blockcontent -> . text
    (5) blockcontent -> . tag
    (6) text -> . TEXT
    (7) text -> . NEWLINE
    (8) text -> . POSSIBLEINDENT
    (9) tag -> . TAGOPEN TAGNAME TAGCLOSE
    (10) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE
    (11) tag -> . TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT
    (12) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT

    TEXT            shift and go to state 7
    NEWLINE         shift and go to state 1
    POSSIBLEINDENT  shift and go to state 8
    TAGOPEN         shift and go to state 3

    blockcontent                   shift and go to state 4
    block                          shift and go to state 5
    tag                            shift and go to state 6
    text                           shift and go to state 9
    document                       shift and go to state 2

state 1

    (7) text -> NEWLINE .

    TEXT            reduce using rule 7 (text -> NEWLINE .)
    NEWLINE         reduce using rule 7 (text -> NEWLINE .)
    POSSIBLEINDENT  reduce using rule 7 (text -> NEWLINE .)
    TAGOPEN         reduce using rule 7 (text -> NEWLINE .)
    $end            reduce using rule 7 (text -> NEWLINE .)
    DEDENT          reduce using rule 7 (text -> NEWLINE .)


state 2

    (0) S' -> document .



state 3

    (9) tag -> TAGOPEN . TAGNAME TAGCLOSE
    (10) tag -> TAGOPEN . TAGNAME TAGARGSEP arglist TAGCLOSE
    (11) tag -> TAGOPEN . TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT
    (12) tag -> TAGOPEN . TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT

    TAGNAME         shift and go to state 10


state 4

    (2) block -> blockcontent .
    (3) block -> blockcontent . block
    (2) block -> . blockcontent
    (3) block -> . blockcontent block
    (4) blockcontent -> . text
    (5) blockcontent -> . tag
    (6) text -> . TEXT
    (7) text -> . NEWLINE
    (8) text -> . POSSIBLEINDENT
    (9) tag -> . TAGOPEN TAGNAME TAGCLOSE
    (10) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE
    (11) tag -> . TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT
    (12) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT

    DEDENT          reduce using rule 2 (block -> blockcontent .)
    $end            reduce using rule 2 (block -> blockcontent .)
    TEXT            shift and go to state 7
    NEWLINE         shift and go to state 1
    POSSIBLEINDENT  shift and go to state 8
    TAGOPEN         shift and go to state 3

    blockcontent                   shift and go to state 4
    block                          shift and go to state 11
    text                           shift and go to state 9
    tag                            shift and go to state 6

state 5

    (1) document -> block .

    $end            reduce using rule 1 (document -> block .)


state 6

    (5) blockcontent -> tag .

    TEXT            reduce using rule 5 (blockcontent -> tag .)
    NEWLINE         reduce using rule 5 (blockcontent -> tag .)
    POSSIBLEINDENT  reduce using rule 5 (blockcontent -> tag .)
    TAGOPEN         reduce using rule 5 (blockcontent -> tag .)
    DEDENT          reduce using rule 5 (blockcontent -> tag .)
    $end            reduce using rule 5 (blockcontent -> tag .)


state 7

    (6) text -> TEXT .

    TEXT            reduce using rule 6 (text -> TEXT .)
    NEWLINE         reduce using rule 6 (text -> TEXT .)
    POSSIBLEINDENT  reduce using rule 6 (text -> TEXT .)
    TAGOPEN         reduce using rule 6 (text -> TEXT .)
    $end            reduce using rule 6 (text -> TEXT .)
    DEDENT          reduce using rule 6 (text -> TEXT .)


state 8

    (8) text -> POSSIBLEINDENT .

    TEXT            reduce using rule 8 (text -> POSSIBLEINDENT .)
    NEWLINE         reduce using rule 8 (text -> POSSIBLEINDENT .)
    POSSIBLEINDENT  reduce using rule 8 (text -> POSSIBLEINDENT .)
    TAGOPEN         reduce using rule 8 (text -> POSSIBLEINDENT .)
    $end            reduce using rule 8 (text -> POSSIBLEINDENT .)
    DEDENT          reduce using rule 8 (text -> POSSIBLEINDENT .)


state 9

    (4) blockcontent -> text .

    TEXT            reduce using rule 4 (blockcontent -> text .)
    NEWLINE         reduce using rule 4 (blockcontent -> text .)
    POSSIBLEINDENT  reduce using rule 4 (blockcontent -> text .)
    TAGOPEN         reduce using rule 4 (blockcontent -> text .)
    DEDENT          reduce using rule 4 (blockcontent -> text .)
    $end            reduce using rule 4 (blockcontent -> text .)


state 10

    (9) tag -> TAGOPEN TAGNAME . TAGCLOSE
    (10) tag -> TAGOPEN TAGNAME . TAGARGSEP arglist TAGCLOSE
    (11) tag -> TAGOPEN TAGNAME . TAGARGSEP NEWLINE INDENT block DEDENT
    (12) tag -> TAGOPEN TAGNAME . TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT

    TAGCLOSE        shift and go to state 13
    TAGARGSEP       shift and go to state 12


state 11

    (3) block -> blockcontent block .

    DEDENT          reduce using rule 3 (block -> blockcontent block .)
    $end            reduce using rule 3 (block -> blockcontent block .)


state 12

    (10) tag -> TAGOPEN TAGNAME TAGARGSEP . arglist TAGCLOSE
    (11) tag -> TAGOPEN TAGNAME TAGARGSEP . NEWLINE INDENT block DEDENT
    (12) tag -> TAGOPEN TAGNAME TAGARGSEP . arglist TAGARGSEP NEWLINE INDENT block DEDENT
    (13) arglist -> . arg
    (14) arglist -> . arglist TAGARGSEP arg
    (15) arg -> . argpart
    (16) arg -> . argpart arg
    (17) argpart -> . TEXT
    (18) argpart -> . tag
    (9) tag -> . TAGOPEN TAGNAME TAGCLOSE
    (10) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE
    (11) tag -> . TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT
    (12) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT

    NEWLINE         shift and go to state 14
    TEXT            shift and go to state 19
    TAGOPEN         shift and go to state 3

    arglist                        shift and go to state 16
    tag                            shift and go to state 18
    arg                            shift and go to state 17
    argpart                        shift and go to state 15

state 13

    (9) tag -> TAGOPEN TAGNAME TAGCLOSE .

    TEXT            reduce using rule 9 (tag -> TAGOPEN TAGNAME TAGCLOSE .)
    NEWLINE         reduce using rule 9 (tag -> TAGOPEN TAGNAME TAGCLOSE .)
    POSSIBLEINDENT  reduce using rule 9 (tag -> TAGOPEN TAGNAME TAGCLOSE .)
    TAGOPEN         reduce using rule 9 (tag -> TAGOPEN TAGNAME TAGCLOSE .)
    $end            reduce using rule 9 (tag -> TAGOPEN TAGNAME TAGCLOSE .)
    TAGCLOSE        reduce using rule 9 (tag -> TAGOPEN TAGNAME TAGCLOSE .)
    TAGARGSEP       reduce using rule 9 (tag -> TAGOPEN TAGNAME TAGCLOSE .)
    DEDENT          reduce using rule 9 (tag -> TAGOPEN TAGNAME TAGCLOSE .)


state 14

    (11) tag -> TAGOPEN TAGNAME TAGARGSEP NEWLINE . INDENT block DEDENT

    INDENT          shift and go to state 20


state 15

    (15) arg -> argpart .
    (16) arg -> argpart . arg
    (15) arg -> . argpart
    (16) arg -> . argpart arg
    (17) argpart -> . TEXT
    (18) argpart -> . tag
    (9) tag -> . TAGOPEN TAGNAME TAGCLOSE
    (10) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE
    (11) tag -> . TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT
    (12) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT

    TAGCLOSE        reduce using rule 15 (arg -> argpart .)
    TAGARGSEP       reduce using rule 15 (arg -> argpart .)
    TEXT            shift and go to state 19
    TAGOPEN         shift and go to state 3

    tag                            shift and go to state 18
    argpart                        shift and go to state 15
    arg                            shift and go to state 21

state 16

    (10) tag -> TAGOPEN TAGNAME TAGARGSEP arglist . TAGCLOSE
    (12) tag -> TAGOPEN TAGNAME TAGARGSEP arglist . TAGARGSEP NEWLINE INDENT block DEDENT
    (14) arglist -> arglist . TAGARGSEP arg

    TAGCLOSE        shift and go to state 23
    TAGARGSEP       shift and go to state 22


state 17

    (13) arglist -> arg .

    TAGCLOSE        reduce using rule 13 (arglist -> arg .)
    TAGARGSEP       reduce using rule 13 (arglist -> arg .)


state 18

    (18) argpart -> tag .

    TEXT            reduce using rule 18 (argpart -> tag .)
    TAGOPEN         reduce using rule 18 (argpart -> tag .)
    TAGCLOSE        reduce using rule 18 (argpart -> tag .)
    TAGARGSEP       reduce using rule 18 (argpart -> tag .)


state 19

    (17) argpart -> TEXT .

    TEXT            reduce using rule 17 (argpart -> TEXT .)
    TAGOPEN         reduce using rule 17 (argpart -> TEXT .)
    TAGCLOSE        reduce using rule 17 (argpart -> TEXT .)
    TAGARGSEP       reduce using rule 17 (argpart -> TEXT .)


state 20

    (11) tag -> TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT . block DEDENT
    (2) block -> . blockcontent
    (3) block -> . blockcontent block
    (4) blockcontent -> . text
    (5) blockcontent -> . tag
    (6) text -> . TEXT
    (7) text -> . NEWLINE
    (8) text -> . POSSIBLEINDENT
    (9) tag -> . TAGOPEN TAGNAME TAGCLOSE
    (10) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE
    (11) tag -> . TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT
    (12) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT

    TEXT            shift and go to state 7
    NEWLINE         shift and go to state 1
    POSSIBLEINDENT  shift and go to state 8
    TAGOPEN         shift and go to state 3

    blockcontent                   shift and go to state 4
    block                          shift and go to state 24
    text                           shift and go to state 9
    tag                            shift and go to state 6

state 21

    (16) arg -> argpart arg .

    TAGCLOSE        reduce using rule 16 (arg -> argpart arg .)
    TAGARGSEP       reduce using rule 16 (arg -> argpart arg .)


state 22

    (12) tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP . NEWLINE INDENT block DEDENT
    (14) arglist -> arglist TAGARGSEP . arg
    (15) arg -> . argpart
    (16) arg -> . argpart arg
    (17) argpart -> . TEXT
    (18) argpart -> . tag
    (9) tag -> . TAGOPEN TAGNAME TAGCLOSE
    (10) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE
    (11) tag -> . TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT
    (12) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT

    NEWLINE         shift and go to state 25
    TEXT            shift and go to state 19
    TAGOPEN         shift and go to state 3

    tag                            shift and go to state 18
    arg                            shift and go to state 26
    argpart                        shift and go to state 15

state 23

    (10) tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE .

    TEXT            reduce using rule 10 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE .)
    NEWLINE         reduce using rule 10 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE .)
    POSSIBLEINDENT  reduce using rule 10 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE .)
    TAGOPEN         reduce using rule 10 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE .)
    $end            reduce using rule 10 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE .)
    TAGCLOSE        reduce using rule 10 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE .)
    TAGARGSEP       reduce using rule 10 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE .)
    DEDENT          reduce using rule 10 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE .)


state 24

    (11) tag -> TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block . DEDENT

    DEDENT          shift and go to state 27


state 25

    (12) tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE . INDENT block DEDENT

    INDENT          shift and go to state 28


state 26

    (14) arglist -> arglist TAGARGSEP arg .

    TAGCLOSE        reduce using rule 14 (arglist -> arglist TAGARGSEP arg .)
    TAGARGSEP       reduce using rule 14 (arglist -> arglist TAGARGSEP arg .)


state 27

    (11) tag -> TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT .

    TEXT            reduce using rule 11 (tag -> TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT .)
    NEWLINE         reduce using rule 11 (tag -> TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT .)
    POSSIBLEINDENT  reduce using rule 11 (tag -> TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT .)
    TAGOPEN         reduce using rule 11 (tag -> TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT .)
    $end            reduce using rule 11 (tag -> TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT .)
    TAGCLOSE        reduce using rule 11 (tag -> TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT .)
    TAGARGSEP       reduce using rule 11 (tag -> TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT .)
    DEDENT          reduce using rule 11 (tag -> TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT .)


state 28

    (12) tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT . block DEDENT
    (2) block -> . blockcontent
    (3) block -> . blockcontent block
    (4) blockcontent -> . text
    (5) blockcontent -> . tag
    (6) text -> . TEXT
    (7) text -> . NEWLINE
    (8) text -> . POSSIBLEINDENT
    (9) tag -> . TAGOPEN TAGNAME TAGCLOSE
    (10) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGCLOSE
    (11) tag -> . TAGOPEN TAGNAME TAGARGSEP NEWLINE INDENT block DEDENT
    (12) tag -> . TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT

    TEXT            shift and go to state 7
    NEWLINE         shift and go to state 1
    POSSIBLEINDENT  shift and go to state 8
    TAGOPEN         shift and go to state 3

    blockcontent                   shift and go to state 4
    block                          shift and go to state 29
    text                           shift and go to state 9
    tag                            shift and go to state 6

state 29

    (12) tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block . DEDENT

    DEDENT          shift and go to state 30


state 30

    (12) tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT .

    TEXT            reduce using rule 12 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT .)
    NEWLINE         reduce using rule 12 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT .)
    POSSIBLEINDENT  reduce using rule 12 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT .)
    TAGOPEN         reduce using rule 12 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT .)
    $end            reduce using rule 12 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT .)
    TAGCLOSE        reduce using rule 12 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT .)
    TAGARGSEP       reduce using rule 12 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT .)
    DEDENT          reduce using rule 12 (tag -> TAGOPEN TAGNAME TAGARGSEP arglist TAGARGSEP NEWLINE INDENT block DEDENT .)

